{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 99,
  "lineage": "26c40965-e32d-1a0f-6b28-1c6580fa8da3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab9c7120dc073bf9",
            "arn": "arn:aws:ec2:us-east-2:654654265672:elastic-ip/eipalloc-0ab9c7120dc073bf9",
            "association_id": "eipassoc-017943b21fb400f20",
            "domain": "vpc",
            "id": "eipalloc-0ab9c7120dc073bf9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b545fd658239442b",
            "private_dns": "ip-10-0-89-65.us-east-2.compute.internal",
            "private_ip": "10.0.89.65",
            "public_dns": "ec2-18-119-55-62.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.55.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:internet-gateway/igw-0de533a5c9290d009",
            "id": "igw-0de533a5c9290d009",
            "owner_id": "654654265672",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab9c7120dc073bf9",
            "association_id": "eipassoc-017943b21fb400f20",
            "connectivity_type": "public",
            "id": "nat-0cb8407b019817803",
            "network_interface_id": "eni-0b545fd658239442b",
            "private_ip": "10.0.89.65",
            "public_ip": "18.119.55.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08919fc8685db7cf8",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:route-table/rtb-063fcdc234e3ba487",
            "id": "rtb-063fcdc234e3ba487",
            "owner_id": "654654265672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb8407b019817803",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private"
            },
            "tags_all": {
              "Name": "staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:route-table/rtb-0fc1dd33e6f4ffe01",
            "id": "rtb-0fc1dd33e6f4ffe01",
            "owner_id": "654654265672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de533a5c9290d009",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public"
            },
            "tags_all": {
              "Name": "staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758c5d4be757ed93",
            "route_table_id": "rtb-063fcdc234e3ba487",
            "subnet_id": "subnet-0eb3d481cb891e84a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050bffebadbaac00a",
            "route_table_id": "rtb-063fcdc234e3ba487",
            "subnet_id": "subnet-006e33c3e20c79ec9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261f033f2478fb68",
            "route_table_id": "rtb-0fc1dd33e6f4ffe01",
            "subnet_id": "subnet-08919fc8685db7cf8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b0fa67c9b406f11",
            "route_table_id": "rtb-0fc1dd33e6f4ffe01",
            "subnet_id": "subnet-0d132115f6f38111a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:subnet/subnet-0eb3d481cb891e84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb3d481cb891e84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654265672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:subnet/subnet-006e33c3e20c79ec9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e33c3e20c79ec9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654265672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:subnet/subnet-08919fc8685db7cf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08919fc8685db7cf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654265672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-2a",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:subnet/subnet-0d132115f6f38111a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d132115f6f38111a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654265672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-2b",
              "kubernetes.io/cluster/staging-demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02e16ec03cd714506"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654265672:vpc/vpc-02e16ec03cd714506",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2ff7eae5e362b47",
            "default_route_table_id": "rtb-092a576469a6d0f50",
            "default_security_group_id": "sg-0fee1e696820d041a",
            "dhcp_options_id": "dopt-0a46627abea13feb5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e16ec03cd714506",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092a576469a6d0f50",
            "owner_id": "654654265672",
            "tags": {
              "Name": "staging-main"
            },
            "tags_all": {
              "Name": "staging-main"
            }
          }
        }
      ]
    }
  ]
}